# aopy_nwb_conv

./: .gitignore  LICENSE  README.md  config.yaml  environment.yaml  pyproject.toml
.github/workflows/: testsuite.yaml
config/: config.template.yaml
docs/: component_specification.md  functional_specification.md
examples/: development_generating_recording_objects.ipynb
src/aopy_nwb_conv/: utils.py
src/aopy_nwb_conv/core/: data_locator.py
src/aopy_nwb_conv/utils/: cache.py  config.py  date_validation.py
tests/: test_utils.py
tests/core/: test_cache.py  test_data_locator.py
tests/fixtures/: test_config_invalid.yaml  test_config_partial.yaml  test_config_valid.yaml
tests/utils/: test_cache.py  test_config.py  test_date_validation.py
