[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aopy_nwb_conv"
version = "0.9.3"
description = "code repo to convert aoLab aopy data format to NWB @UW"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ajm2605", email = "ajm2605@uw.edu"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "xarray",
    "pandas",
    "psutil",
    "h5py",
    "tables",
    "scikit-learn>=1.0",
    "statsmodels",
    "nitime",
    "xlrd",
    "openpyxl",
    "matplotlib>=3.9",
    "scipy",
    "PyWavelets",
    "Pillow",
    "pyyaml",
    "tqdm",
    "open-ephys-python-tools",
    "aolab-bmi3d>=1.0",
    "sympy",
    "ibllib",
    "seaborn>=0.13.2",
    "remodnav",
    "pynwb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",  # for parallel test execution
    "ruff>=0.1.0",
    "black>=23.0",  # alternative formatter if you prefer
    "mypy>=1.0",  # type checking
    "pre-commit>=3.0",  # git hooks for automated checks
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-autodoc-typehints>=1.0",
    "myst-parser>=2.0",  # for markdown support in docs
]
jupyter = [
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "ipywidgets>=8.0",
    "nwbwidgets>=0.11.0",  # for NWB visualization
]

[project.urls]
Homepage = "https://github.com/aolabNeuro/analyze"
Documentation = "https://github.com/aolabNeuro/analyze/docs"
"Bug Tracker" = "https://github.com/aolabNeuro/analyze/issues"
Repository = "https://github.com/aolabNeuro/analyze"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B011"]  # assert False

[tool.ruff.lint.isort]
known-first-party = ["aopy_nwb_conv"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=aopy_nwb_conv",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["aopy_nwb_conv"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# MyPy configuration (optional but recommended)
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # set to true for strict typing
ignore_missing_imports = true  # until you add type stubs for dependencies